<resources>
    <string name="app_name">TransViro</string>
    <string name="loginText">Login</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="button_login">Login</string>
    <string name="signup_Text">Signup Here</string>
    <string name="forgotPass_Text">Forgot Password?</string>
    <string name="title_activity_reward_dashboard">RewardDashboard</string>
    <string name="rewardTitle">Rewards</string>
    <string name="setting_text">Settings</string>
    <string name="leaderboard_text">Leaderboard</string>
    <string name="point_text">Points</string>
    <string name="map_text">Maps</string>
    <string name="profile_text">Profile</string>
    <string name="rewards_text">Rewards</string>
    <string name="genderTxt">Gender:</string>

    <string name="txtChoice">Select Answer</string>

    <string-array name="txtGroup1">
        <item> Male </item>
        <item> Female </item>
    </string-array>

    <string-array name="birthday_months">
        <item> Jan</item>
        <item> Feb </item>
        <item> Mar </item>
        <item> Apr </item>
        <item> May </item>
        <item> Jun </item>
        <item> Jul </item>
        <item> Aug </item>
        <item> Sep </item>
        <item> Oct </item>
        <item> Nov </item>
        <item> Dec </item>
    </string-array>

    <string-array name="birthday_days">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
    </string-array>

    <string-array name="birthday_years">
        <item> 1905 </item>
        <item> 1906 </item>
        <item> 1907 </item>
        <item> 1908 </item>
        <item> 1909 </item>
        <item> 1910 </item>
        <item> 1911 </item>
        <item> 1912 </item>
        <item> 1913 </item>
        <item> 1914 </item>
        <item> 1915 </item>
        <item> 1916 </item>
        <item> 1917 </item>
        <item> 1918 </item>
        <item> 1919 </item>
        <item> 1920 </item>
        <item> 1921 </item>
        <item> 1922 </item>
        <item> 1923 </item>
        <item> 1924 </item>
        <item> 1925 </item>
        <item> 1926 </item>
        <item> 1927 </item>
        <item> 1928 </item>
        <item> 1929 </item>
        <item> 1930 </item>
        <item> 1931 </item>
        <item> 1932 </item>
        <item> 1933 </item>
        <item> 1934 </item>
        <item> 1935 </item>
        <item> 1936 </item>
        <item> 1937 </item>
        <item> 1938 </item>
        <item> 1939 </item>
        <item> 1940 </item>
        <item> 1941 </item>
        <item> 1942 </item>
        <item> 1943 </item>
        <item> 1944 </item>
        <item> 1945 </item>
        <item> 1946 </item>
        <item> 1947 </item>
        <item> 1948 </item>
        <item> 1949 </item>
        <item> 1950 </item>
        <item> 1951 </item>
        <item> 1952 </item>
        <item> 1953 </item>
        <item> 1954 </item>
        <item> 1955 </item>
        <item> 1956 </item>
        <item> 1957 </item>
        <item> 1958 </item>
        <item> 1959 </item>
        <item> 1960 </item>
        <item> 1961 </item>
        <item> 1962 </item>
        <item> 1963 </item>
        <item> 1964 </item>
        <item> 1965 </item>
        <item> 1966 </item>
        <item> 1967 </item>
        <item> 1968 </item>
        <item> 1969 </item>
        <item> 1970 </item>
        <item> 1971 </item>
        <item> 1972 </item>
        <item> 1973 </item>
        <item> 1974 </item>
        <item> 1975 </item>
        <item> 1976 </item>
        <item> 1977 </item>
        <item> 1978 </item>
        <item> 1979 </item>
        <item> 1980 </item>
        <item> 1981 </item>
        <item> 1982 </item>
        <item> 1983 </item>
        <item> 1984 </item>
        <item> 1985 </item>
        <item> 1986 </item>
        <item> 1987 </item>
        <item> 1988 </item>
        <item> 1989 </item>
        <item> 1990 </item>
        <item> 1991 </item>
        <item> 1992 </item>
        <item> 1993 </item>
        <item> 1994 </item>
        <item> 1995 </item>
        <item> 1996 </item>
        <item> 1997 </item>
        <item> 1998 </item>
        <item> 1999 </item>
        <item> 2000 </item>
        <item> 2001 </item>
        <item> 2002 </item>
        <item> 2003 </item>
        <item> 2004 </item>
        <item> 2005 </item>
        <item> 2006 </item>
        <item> 2007 </item>
        <item> 2008 </item>
        <item> 2009 </item>
        <item> 2010 </item>
        <item> 2011 </item>
        <item> 2012 </item>
        <item> 2013 </item>
        <item> 2014 </item>
        <item> 2015 </item>
        <item> 2016 </item>
        <item> 2017 </item>
        <item> 2018 </item>
    </string-array>

    <string-array name="txtGroup3">
        <item> Work </item>
        <item> School </item>
        <item> Shopping </item>
        <item> Avoid City Traffic </item>
        <item> Lack of Car </item>
        <item> Lack of License </item>
        <item> Friendly to Environment </item>
    </string-array>

    <string-array name="txtGroup4">
        <item> Daily </item>
        <item> Weekly </item>
        <item> Monthly </item>
    </string-array>

    <string-array name="txtGroup5">
        <item> Yes </item>
        <item> No </item>
    </string-array>

    <string-array name="txtGroup6">
        <item> Shopping </item>
        <item> Food </item>
        <item>Tickets</item>
        <item>Other</item>
    </string-array>

    <string-array name="txtGroup7">
        <item> Yes </item>
        <item> No </item>
    </string-array>

    <string-array name="txtGroup8">
        <item> Web </item>
        <item> City </item>
        <item> Word of Mouth </item>
        <item> Other Forms of Advertising</item>
    </string-array>


    <string name="txtQ1">Gender</string>
    <string name="txtQ2">Age</string>
    <string name="txtQ3">Why do you ride the bus?</string>
    <string name="txtQ4">How often do you ride the bus?</string>
    <string name="txtQ5">Do your friends ride the bus?</string>
    <string name="txtQ6">What kinds of rewards will make you want to ride the bus more often?</string>
    <string name="txtQ7">Are you a college student?</string>
    <string name="txtQ8">How did you hear about Transit Tribute?</string>
    <string name="btnSurvey">Continue</string>
    <string name="btnFin">Finish</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="birthday_text">Birthday</string>
    <string name="month_select">Month</string>
    <string name="day_select">Day</string>
    <string name="year_select">Year</string>
    <string name="_1">1</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
</resources>
