<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:background="#40000000"
            android:hint="@string/fName"
            android:textColorHint="@color/colorPrimaryDark"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:background="#40000000"
            android:singleLine="true"
            android:hint="@string/lName"
            android:fontFamily="sans-serif-medium"
            android:textColorHint="@color/colorPrimaryDark"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:background="#40000000"
            android:singleLine="true"
            android:hint="@string/usernameText"
            android:fontFamily="sans-serif-medium"
            android:textColorHint="@color/colorPrimaryDark"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:background="#40000000"
            android:hint="@string/passwordText"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/enterPass"
            android:textColorHint="@color/colorPrimaryDark"
            android:singleLine="true"
            />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtQ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/txtQ1"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            />

        <Spinner
            android:id="@+id/txtGroup1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:entries="@array/txtGroup1"
            android:prompt="@string/txtChoice"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:layout_below="@id/txtQ1"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/birthday_text"
        android:layout_below="@+id/txtGroup1"
        android:id="@+id/birthday_text"
        />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/birthday_text"
      android:orientation="horizontal"
      android:id="@+id/birthday_layout"
      >
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginLeft="10dp"
        android:entries="@array/birthday_months"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:prompt="@string/month_select"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:id="@+id/birthday_spinner"
        android:layout_weight="1"
        />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/birthday_days"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:prompt="@string/day_select"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            />
      <Spinner
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:entries="@array/birthday_years"
          android:layout_weight="1"
          android:spinnerMode="dialog"
          android:textAlignment="center"
          android:prompt="@string/year_select"
          android:fontFamily="sans-serif-medium"
          android:layout_marginTop="20dp"
          android:layout_marginRight="10dp"
          />
  </LinearLayout>



</RelativeLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
      android:layout_marginBottom="30dp"
        android:text="@string/btnSurvey"
        android:fontFamily="sans-serif-medium"
        android:background="#40000000"
        android:textColor="@color/white"
        />
</RelativeLayout>