<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@mipmap/grad_back"
    tools:context=".Activity_Login_Screen">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">


        <ImageView
            android:id="@+id/trans_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/transviro_logo" />

        <RelativeLayout
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trans_logo"
            android:visibility="gone" >

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-sarif-light"
                android:text="@string/usernameText"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />



            <EditText
                android:id="@+id/userEdit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/username_tv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#40000000"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textAlignment="center"
                 />

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userEdit"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-sarif-light"
                android:text="@string/passwordText"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/passEdit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/password_tv"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:singleLine="true"
                android:background="#40000000"
                />

            <Button
                android:id="@+id/btn_login"
                android:onClick="loginUser"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/passEdit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/button_login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_signUp"
            android:onClick="signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/signup_Text"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/forgotPass_Text"
            android:textAllCaps="true"
            android:textColor="@color/white" />


    </RelativeLayout>


</RelativeLayout>