<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="horizontal"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#80969898">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/profile_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/profile_text"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#80969898">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/leaderboard_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/leaderboard_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#80969898">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:onClick="rewardClick" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/rewards_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/rewards_text"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#80969898">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:onClick="pointsClick"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/point_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/point_text"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#80969898">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/map_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/map_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#80969898">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/setting_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/setting_text"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>